--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
-  text-align: center;
+.Side {
+  position: fixed;
+  width: 240px;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  background-color: rgb(29, 35, 39);
+  overflow-y: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Main {
   display: flex;
   flex-direction: column;
+  background-color: rgb(29, 35, 39);
+  height: 100vh;
+  margin-inline-start: 240px;
+}
+
+.Create-note-wrapper {
+  padding: 12px;
+}
+
+.Note-button {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: none;
+  background: none;
+  color: inherit;
+  font-weight: bold;
+}
+
+.Note-button-selected {
+  background: rgb(44, 51, 56);
+}
+
+.Note-button:hover {
+  background: rgb(60, 60, 60);
+}
+
+.Note-editor {
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  padding: 50px;
+  padding-right: 100px;
+  padding-left: 100px;
+  margin: 0;
+  background: rgb(29, 35, 39);
+  font-size: 1em;
+  font-family: inherit;
+  color: white;
+  box-sizing: border-box;
+}
+
+.Save-button {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 240px;
+  padding: 12px;
+  border: none;
+  background: rgb(44, 51, 56);
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.Save-button:hover {
+  background: rgb(60, 60, 60);
+}
+
+.Note-title {
+  flex-shrink: 0;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  background: none;
+  color: inherit;
+  font-weight: bold;
+  font-size: 2em;
+  font-family: inherit;
+  color: white;
+  box-sizing: border-box;
+}
+
+.Note-title-editing {
+  border: 1px solid #ffffff;
+}
+
+.Note-container {
+  position: relative;
+}
+
+.Delete-button {
+  position: absolute;
+  background-color: transparent;
+  top: 50%;
+  right: 10px;
+  border: none;
+  transform: translateY(-50%);
+  
+}
+
+.Delete-button:hover {
+  background-color: rgb(60, 60, 60);
+  border-radius: 20%;
+}
+
+.Search-wrapper {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.Search-icon {
+  position: absolute;
+  left: 7px;
+  top: 5px;
+}
+
+.Search-input {
+
+  width: 100%;
+  border: none;
+  background: none;
+  color: inherit;
+  font-weight: bold;
+  font-size: 1em;
+  font-family: inherit;
+  color: white;
+  box-sizing: border-box;
+  padding-left: 30px;
+}
+
+.Search-input:focus {
+  outline: none;
+}
+
+.Pin-button {
+  position: absolute;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+}
+
+.Pin-icon {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
