--- a/src/App.css
+++ b/src/App.css
@@ -110,14 +110,24 @@
 }
 
 .Delete-button:hover {
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(60, 60, 60,);
   border-radius: 20%;
+}
+
+.Delete-button:hover > .Trashcan-icon {
+  color: rgb(255, 255, 255);
+
+}
+
+.Trashcan-icon {
+  color: rgba(255, 255, 255, 0.2);
 }
 
 .Search-wrapper {
   display: flex;
   align-items: center;
   position: relative;
+  padding-bottom: 12px;
 }
 
 .Search-icon {
@@ -156,16 +166,24 @@
 .Pin-button:hover {
   background-color: rgb(60, 60, 60);
   border-radius: 20%;
+  
+}
+
+.Pin-button:hover > .Pin-icon-unpinned {
+  color: rgba(255, 255, 255, 1);
+  transform: rotate(45deg);
 }
 
 .Pin-icon-unpinned {
 
-  color: white;
+  color: rgba(255, 255, 255, 0.2);
   transform: rotate(45deg);
 }
 
+
+
 .Pin-icon-pinned {
-  color: rgb(100, 137, 162);
+  color: rgb(255, 255, 255);
   transform: rotate(45deg);
 }
 
