--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,10 @@
   border-radius: 4px;
 }
 
+.Note-button-done {
+  background-color: green
+}
+
 .Note-editor {
   flex-grow: 1;
   width: 100%;
@@ -272,4 +276,12 @@
 
 .Cancel-deletion-button:hover {
   background: lightsalmon;
+}
+
+
+.Username-display {
+  color: white;
+  font-weight: bold;
+  padding: 12px;
+  text-align: center;
 }
