--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,37 @@
   overflow-y: auto;
 }
 
+/* For Webkit browsers like Chrome, Safari */
+.Side::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+}
+
+.Side::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5); /* color of the track */
+}
+
+.Side::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.7); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid rgba(0, 0, 0, 0); /* creates padding around scroll thumb */
+}
+
+
+/* For Webkit browsers like Chrome, Safari */
+.Note-editor::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+}
+
+.Note-editor::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5); /* color of the track */
+}
+
+.Note-editor::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.7); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid rgba(0, 0, 0, 0); /* creates padding around scroll thumb */
+}
+
 .Main {
   display: flex;
   flex-direction: column;
@@ -40,18 +71,30 @@
   background: rgb(60, 60, 60);
 }
 
+.Note-button-wrapper {
+  /*
+  make space between the children of this element
+  */
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+
+}
+
 .Note-button {
   display: block;
   width: 100%;
   padding: 12px;
-  padding-left: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   border: 1px solid transparent;
   background: none;
   color: white;
   font-weight: bold;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .Note-button-selected {
@@ -65,6 +108,28 @@
 
 .Note-button-done {
   background-color: green
+}
+
+.note-date-display {
+
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: none;
+  font-size: 10px;
+  margin-top: 10px;
+}
+
+.note-preview {
+  color: white;
+  font-weight: none;
+  font-size: 14px;
+  margin-top: 10px;
+} 
+
+.note-date-display,
+.note-preview {
+  width: 100%;
+  text-align: left; 
+
 }
 
 .Note-editor {
@@ -127,7 +192,7 @@
 .Delete-button {
   position: absolute;
   background-color: transparent;
-  top: 50%;
+  top: 22%;
   right: 10px;
   border: none;
   transform: translateY(-50%);
@@ -186,7 +251,7 @@
 .Pin-button {
   position: absolute;
   background-color: transparent;
-  top: 50%;
+  top: 22%;
   left: 10px;
   border: none;
   transform: translateY(-50%);
@@ -209,6 +274,11 @@
 
 .Pin-icon-pinned {
   color: rgb(255, 255, 255);
+  transform: rotate(45deg);
+}
+
+.Pin-button:hover > .Pin-icon-pinned {
+  color: rgba(255, 255, 255, 0.2);
   transform: rotate(45deg);
 }
 
