--- a/src/App.css
+++ b/src/App.css
@@ -132,10 +132,17 @@
 
 }
 
+.Note-editor-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+}
+
 .Note-editor {
   flex-grow: 1;
+  height: 390%;
   width: 100%;
-  height: 100%;
   border: none;
   outline: none;
   resize: none;
@@ -148,6 +155,49 @@
   font-family: inherit;
   color: white;
   box-sizing: border-box;
+}
+
+.Note-editor-footer {
+  position: fixed;
+  bottom: 0;
+  
+  width: 100%;
+  color: white;
+  font-size: 0.85em;
+  padding: 24px;
+  
+}
+
+.Note-editor-select-font {
+  margin-left: 24px;
+  border: none;
+  background: none;
+  color: rgb(161, 160, 160);
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+
+}
+
+/* the option's bg color should be changed*/
+.Note-editor-select-font option {
+  background: rgb(29, 35, 39);
+}
+
+
+/* For Webkit browsers like Chrome, Safari */
+.Note-editor-select-font::-webkit-scrollbar {
+  width: 8px; /* width of the scrollbar */
+}
+
+.Note-editor-select-font::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5); /* color of the track */
+}
+
+.Note-editor-select-font::-webkit-scrollbar-thumb {
+  background-color: rgba(17, 17, 17, 0.7); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid rgba(0, 0, 0, 0); /* creates padding around scroll thumb */
 }
 
 .Save-button {
@@ -167,10 +217,36 @@
   background: rgb(60, 60, 60);
 }
 
+.Load-more-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Load-more-button  {
+  border: none;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.2);
+  
+  margin: 24px;
+  margin-bottom: 50px;
+}
+
+.Load-more-button:hover {
+  /*
+  hihlight the text when hovered not the whole button
+  */
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  
+  
+}
+
 .Note-title {
   flex-shrink: 0;
   width: 100%;
   padding: 12px;
+  padding-left: 25px;
   border: none;
   background: none;
   color: inherit;
@@ -354,4 +430,47 @@
   font-weight: bold;
   padding: 12px;
   text-align: center;
+}
+
+
+.Spinner {
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin: auto;
+}
+
+.Spinner div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #333;
+  border-radius: 50%;
+  animation: Spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #333 transparent transparent transparent;
+}
+
+.Spinner div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.Spinner div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.Spinner div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes Spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
