--- a/src/components/Buttons/styles/CreateNoteButton.css
+++ b/src/components/Buttons/styles/CreateNoteButton.css
@@ -1,14 +1,21 @@
-.Button {
+
+
+
+.CreateNote-button {
+    display: block;
+    width: 100%;
     padding: 12px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    border: 1px solid white;
+    border: 1px solid rgb(255, 255, 255, 0.2);
+    border-radius: 4px;
     background: none;
     color: inherit;
     font-weight: bold;
+    color: white;
   }
   
-  .Button:hover {
+  .CreateNote-button:hover {
     background: rgb(60, 60, 60);
   }
